--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@ line-height: 1.5;
 text-align: justify;
 }
 
-input[type="submit"] {
+button {
 
 width: 30%;
 margin: 1em auto;
@@ -54,7 +54,7 @@ min-width: 100px;
 border-radius: 20px;
 }
 
-input[type="submit"]:hover 
+button:hover 
 {
 background: #c6b8d4;
 color: #fff;
