--- a/index.html
+++ b/index.html
@@ -42,20 +42,20 @@ line-height: 1.5;
 text-align: justify;
 }
 
-button {
+button[type="submit"] {
 
-width: 30%;
-margin: 1em auto;
-height: 1.5em;
-font-size: 1rem;
-background-color: 808000;
-border-color: white;
-min-width: 100px;
-border-radius: 20px;
+  width: 2%;
+  margin: 1em auto;
+  height: 2em;
+  font-size: rem;
+  background-color: 808000;
+  border-color: white;
+  min-width: 100px;
+  border-radius: 20px;
+  font-family:Verdana, Geneva, Tahoma, sans-serif
 }
 
-button: hover 
-{
+button[type="submit"]:hover {
 background: #c6b8d4;
 color: #fff;
 border: 1px solid #eee;
@@ -63,4 +63,5 @@ border-radius: 20px;
 box-shadow: 5px 5px 5px #eee;
 text-shadow: 1px;
 }
+
 </style>
