--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <h1>To my love,</h1>
 <form a="https://jsselyn.github.io/projectlove3/">
  <p> I dont think you know how important you are to me. From the first time I saw you a light shined bright into my dark life and ever since then I have never stop laying my eyes on you. Do you know how much I have cried my eyes to sleep thinking i was not good enough for anybody? That used to be me of course but now you made me feel more than enough and I cannot thank you enough. Whenever I look at you i feel like i'm home. Now, I never want to go out but going out with you? I feel like a snail... ya know cause they bring their home everywhere they go. The thought of being apart from you is nowhere found in my dictionary. There is a saying that says you know when you found true love when you can envision the future together all while still appreciating the present. You can give without loving, but you can never love without giving. I want to give and build a future together with you and I will be there through the ups and downs. I dont mind waiting even if it takes thousands of years. I wish I can express exactly how I feel about you and I just want to say I LOVE YOU and im proud of you always and forever. &#10084;</p>
-<button type="submit" value="I love you <3">I Love You <3</button>
+<button type="submit" value="Submit">I Love You <3</button>
    </form>
   </div>
 </body>
